[package]
name = "reqwest-retry-after"
version = "0.2.0"
edition = "2021"
description = "Retry-After header support for reqwest"
license = "MIT"
authors = ["Justin Perez <justinmp215@gmail.com>"]
repository = "https://github.com/melotic/reqwest-retry-after"
keywords = ["http", "request", "reqwest", "retry", "retry-after"]
categories = ["asynchronous", "web-programming::http-client", "parsing"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.77"
http = "^1.2"
reqwest = "^0.12"
reqwest-middleware = "^0.4"
tokio = { version = "^1.35", features = ["sync"] }
task-local-extensions = "^0.1.4"
time = { version = "^0.3.37", features = ["formatting", "parsing"] }

[dev-dependencies]
tokio = { version = "^1.35", features = ["rt", "macros"] }
httpmock = "^0.7""
